src/snapshots/afrotd__parser__tests__interpretation_html_8.7.2_3.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 8.7.2.III
        </p>
    </div>
    <div class="message-body">
        <p>
            Team A puntet. Der Ball wird von Team B berührt (kein neuer
            Antrieb) und überquert Team B’s Goalline. Dann fällt Team B auf den
            Ball oder der Ball geht von der Endzone ins Aus.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Touchback. Die gleiche Regel trifft zu, wenn ein fliegender
                Kick Team B streift oder der Ball durch ein versuchtes Fangen
                lediglich abgelenkt wird. Team B kann den Ball recovern und
                advancen und es ist ein Touchback, wenn ein Team B-Spieler in
                der Endzone zu Boden gebracht wird oder er hinter der Goalline
                ins Aus geht (Regel 8.6.1.a).
            </p>
        </details>
    </div>
</article>
