src/snapshots/afrotd__parser__tests__interpretation_html_9.1.10_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 9.1.10.I
        </p>
    </div>
    <div class="message-body">
        <p>
            Bei einem Vorwärtspass-Spiel blockt A75 B66 hinter der neutralen
            Zone. Während A75 B66 weiterhin berührt, blockt A47 anschließend
            B66 an dessen Oberschenkeln.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Chop Block. Strafe - 15 Meter vom Previous Spot.
            </p>
        </details>
    </div>
</article>
