src/snapshots/afrotd__parser__tests__interpretation_html_9.1.14_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 9.1.14.I
        </p>
    </div>
    <div class="message-body">
        <p>
            A10 steht in einer „Shotgun“ ähnlichen Formation 7,5 m hinter dem
            Snapper, der seinen Kopf gesenkt hält und zwischen seinen Beinen
            zurückschaut. Unmittelbar nach dem Snap greift Nose Guard B55 den
            Snapper direkt an und berührt ihn, indem er ihn zurückdrückt.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Legal. Dem Snapper wird kein spezieller Schutz zugesprochen,
                weil Team A sich nicht in einer Scrimmage Kick-Formation
                befindet, da A10 sich nicht wenigstens 10 Meter hinter der
                neutralen Zone befindet (Regel 2.16.10). Der Snapper hat den
                üblichen Schutz gegen jedes persönliche Foul.
            </p>
        </details>
    </div>
</article>
