src/snapshots/afrotd__parser__tests__interpretation_html_9.1.14_2.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 9.1.14.II
        </p>
    </div>
    <div class="message-body">
        <p>
            Team A befindet sich offensichtlich in einer Scrimmage
            KickFormation. Unmittelbar nach dem Snap greift Nose Guard B55
            direkt den Snapper an, berührt ihn und drückt ihn zurück. Der Ball
            wird zu einem Backfieldspieler, drei Meter hinter der Scrimmage
            Line oder zum potentiellen Kicker gesnappt, der statt zu kicken mit
            dem Ball läuft oder diesen wirft.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Foul. Strafe – 15 Meter und automatisches First Down. Der
                Snapper darf nicht angegriffen werden, bevor eine Sekunde nach
                dem Snap vergangen ist, wenn Team A sich in einer Scrimmage
                Kick- Formation aufgestellt hat.
            </p>
        </details>
    </div>
</article>
