src/snapshots/afrotd__parser__tests__interpretation_html_9.1.14_3.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 9.1.14.III
        </p>
    </div>
    <div class="message-body">
        <p>
            Team A befindet sich in einer Scrimmage Kick-Formation, wobei der
            Punter sich 15 Meter hinter der neutralen Zone befindet. Sofort
            nach dem Snap versucht Nose Guard B71, der sich innerhalb eines
            Meters an seiner Scrimmage Line außerhalb des Körperrahmens des
            Snappers aufgestellt hatte, durch die Lücke zwischen Snapper und
            dem daneben stehenden Lineman durchzubrechen. B71 berührt zuerst
            den neben dem Snapper stehenden Lineman.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Legal. Zufälliger Kontakt mit dem Snapper nach diesem
                anfänglichen legalen Kontakt ist kein Foul (Regel 2.16.10).
            </p>
        </details>
    </div>
</article>
